--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=
-DB_USER=
-DB_PASS=
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASS=Russia_will_be_4ree
 
 DB_HOST_TEST=localhost
 DB_PORT_TEST=5432
-DB_NAME_TEST=
-DB_USER_TEST=
-DB_PASS_TEST=
+DB_NAME_TEST=postgres_test
+DB_USER_TEST=postgres
+DB_PASS_TEST=Russia_will_be_4ree
